LC: azure cli installantion, again

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -6,7 +6,12 @@
 trigger:
 - main
 
+variables:
+  pythonVersion: 3.8
+
 pool:
   name: my-agent-pool
 
-
+steps:
+  - bash: pip install azure-cli --extra-index-url https://azurecliprod.blob.core.windows.net/edge
+    displayName: 'Install and Upgrade Azure CLI'
