Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,6 +18,7 @@ steps:
     displayName: 'Install and Upgrade Azure CLI'
   
   - task: AzureCLI@2
+    displayName: 'Upload app to azure'
     inputs:
       azureSubscription: '$(Azure_Subscription)'
       scriptType: 'bash'
