--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -23,5 +23,5 @@ steps:
       azureSubscription: '$(Azure_Subscription)'
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
-      inlineScript: 'az webapp up -n lakshmi --os-type Linux --resource-group lakshmichakka  --location uksouth --runtime "python|3.6'
+      inlineScript: 'az webapp up -n lakshmi --os-type Linux --resource-group lakshmichakka  --location northeurope --runtime "python|3.6'
       workingDirectory: 'src/'
