Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -13,7 +13,11 @@ pool:
   name: my-agent-pool
 
 steps:
-  - script: sudo apt install python3-pip -y
+  - script:
+      sudo apt install python3-venv -y
+      source venv/bin/activate
+      sudo apt install python3-pip -y
+      pip3 install -r src/requirements.txt
   - bash: pip install azure-cli --extra-index-url https://azurecliprod.blob.core.windows.net/edge
     displayName: 'Install and Upgrade Azure CLI'
   
