Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -22,5 +22,5 @@ steps:
       azureSubscription: 'Avanade Delivery(3eba6e29-3983-495b-a539-c3c4b43fb90c)'
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
-      inlineScript: 'az webapp up -n lakshmi --os-type Linux --resource-group lakshmichakka  --location uksouth --runtime "python|3.6"'
+      inlineScript: 'az webapp up -n lakshmi --os-type Linux --resource-group lakshmichakka  --location europesouth --runtime "python|3.6"'
       workingDirectory: 'src/'
