Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,10 +25,10 @@ steps:
       inlineScript: 'az webapp up -n lakshmi --os-type Linux --resource-group lakshmichakka  --location eastus2 --runtime "python|3.6"'
       workingDirectory: 'src/'
 
-  - task: AzureCLI@2
-    displayName: 'connection string'
-    inputs:
-      azureSubscription: '$(Azure_Subscription)'
-      scriptType: 'bash'
-      scriptLocation: 'inlineScript'
-      inlineScript: 'az webapp config connection-string set -g lakshmichakka -n lakshmi -t mysql'
+  # - task: AzureCLI@2
+  #   displayName: 'connection string'
+  #   inputs:
+  #     azureSubscription: '$(Azure_Subscription)'
+  #     scriptType: 'bash'
+  #     scriptLocation: 'inlineScript'
+  #     inlineScript: 'az webapp config connection-string set -g lakshmichakka -n lakshmi -t mysql /--settings mysql1='Server=myServer;Database=myDB;Uid=myUser;'
