--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -13,16 +13,16 @@ pool:
   name: my-agent-pool
 
 jobs:
-- job: req
-  displayName: Requirements
-  steps:
-  - script: 
-      sudo apt install python3-venv -y
-      python3 -m venv venv
-      source venv/bin/activate
-      sudo apt install python3-pip -y
-      pip3 install -r src/requirements.txt
-      python3 src/app.py
+# - job: req
+#   displayName: Requirements
+#   steps:
+#   - script: 
+#       sudo apt install python3-venv -y
+#       python3 -m venv venv
+#       source venv/bin/activate
+#       sudo apt install python3-pip -y
+#       pip3 install -r src/requirements.txt
+#       python3 src/app.py
 - job: deploy
   steps:
   - script: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
