--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -43,7 +43,7 @@ jobs:
       azureSubscription: '$(Azure_Subscription)'
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
-      inlineScript: 'az webapp config appsettings set -g lakshmichakka -n lakshmi --settings DATAVASE_URI=$(DATABASE_URI)'
+      inlineScript: 'az webapp config appsettings set -g lakshmichakka -n lakshmi --settings DATABASE_URI=$(DATABASE_URI)'
 
 - job: apprun
   steps: 
