--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -45,7 +45,7 @@ jobs:
       scriptLocation: 'inlineScript'
       inlineScript: 'az webapp config appsettings set -g lakshmichakka -n lakshmi --settings DATABASE_URI=$(DATABASE_URI)'
 
-# - job: apprun
-#   steps: 
-#   - script: python3 src/app.py
-#     displayName: "run python app"
+- job: apprun
+  steps: 
+  - script: python3 src/app.py
+    displayName: "run python app"
