--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -43,3 +43,13 @@ jobs:
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: 'az webapp config appsettings set -g lakshmichakka -n lakshmi --settings DATABASE_URI=$(DATABASE_URI)'
+
+- job: runapp
+  steps:
+    - script: 
+        sudo apt install python3-venv -y
+        source venv/bin/activate
+        sudo apt install python3-pip -y
+        pip3 install src/requirements.txt
+        python3 src/app.py
+  displayName: 'run python'
